tests/snapshots/run_wpt_conformance__trtx_where_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float32 1D constant tensors, trtx
 where :: where float32 1D constant tensors: index 0: actual=90.44255 expected=70.271515 ulp=2643858 tolerance=4
  inputs: inputCondition: [241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0] (constant); inputFalseValue: [90.44255065917967, 66.7642593383789, -39.82423782348633, -21.683168411254883, -67.3449478149414, -46.46003341674805, -55.907073974609375, 65.5730209350586, 35.14354705810547, 11.960981369018556, 76.65287780761719, 60.741416931152344, -93.93305206298828, -30.397233963012695, 34.315250396728516, 7.708847045898437, -82.2353286743164, 91.12223052978516, 22.937334060668945, 74.97810363769531, 18.877336502075195, 62.31299591064453, 48.86710357666016, -75.41789245605469] (constant); inputTrueValue: [70.27151489257813, 89.99047088623047, -1.5351932048797607, -83.77035522460938, 29.59670639038086, -37.10446548461914, -6.663239002227783, -83.15333557128906, -90.47624206542967, -45.470706939697266, 50.38861083984375, 46.510799407958984, 47.50301361083984, -21.95842933654785, 42.89878463745117, -76.8262710571289, 67.0030746459961, 40.09717559814453, -29.081029891967773, -12.19106674194336, -10.8577880859375, -23.30252265930176, 30.851404190063477, -58.82704544067383] (constant)
  expected whereOutput: [70.271515, 66.76426, -1.5351932, -21.683168, 29.596706, -37.104465, -6.663239, 65.57302, -90.47624, -45.470707 ...] (len=24)
  actual whereOutput: [90.44255, 66.76426, -39.824238, -21.683168, -67.34495, -46.460033, -55.907074, 65.57302, 35.143547, 11.960981 ...] (len=24)
  expected whereOutput full nd:
[70.271515, 66.76426, -1.5351932, -21.683168, 29.596706, -37.104465, -6.663239, 65.57302, -90.47624, -45.470707, ...] (len=24, shape=[24])
  actual whereOutput full nd:
[90.44255, 66.76426, -39.824238, -21.683168, -67.34495, -46.460033, -55.907074, 65.57302, 35.143547, 11.960981, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0]);
    operand_1: f32[24] @bytes([150, 226, 180, 66, 77, 135, 133, 66, 5, 76, 31, 194, 33, 119, 173, 193, 157, 176, 134, 194, 19, 215, 57, 194, 216, 160, 95, 194, 99, 37, 131, 66, 254, 146, 12, 66, 46, 96, 63, 65, 70, 78, 153, 66, 54, 247, 114, 66, 185, 221, 187, 194, 137, 45, 243, 193, 209, 66, 9, 66, 224, 174, 246, 64, 125, 120, 164, 194, 149, 62, 182, 66, 169, 127, 183, 65, 202, 244, 149, 66, 201, 4, 151, 65, 130, 64, 121, 66, 234, 119, 67, 66, 246, 213, 150, 194]);
    operand_2: f32[24] @bytes([4, 139, 140, 66, 31, 251, 179, 66, 54, 129, 196, 191, 108, 138, 167, 194, 14, 198, 236, 65, 249, 106, 20, 194, 65, 57, 213, 192, 130, 78, 166, 194, 214, 243, 180, 194, 1, 226, 53, 194, 240, 141, 73, 66, 15, 11, 58, 66, 22, 3, 62, 66, 221, 170, 175, 193, 91, 152, 43, 66, 13, 167, 153, 194, 147, 1, 134, 66, 130, 99, 32, 66, 243, 165, 232, 193, 156, 14, 67, 193, 128, 185, 45, 193, 145, 107, 186, 193, 173, 207, 246, 65, 229, 78, 107, 194]);
  }

  nodes {
    [whereOutput] = where(operand_0, operand_2, operand_1, label="");
  }

  outputs { whereOutput; }
}
