tests/snapshots/run_wpt_conformance__trtx_where_float32_4D_tensors_all_broadcast_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "where.https.any.js",
    "where float32 4D tensors all broadcast 4D",
    "trtx",
    "PASS",
)
